--- a/Collection_Framework/ArrayList/.project
+++ b/Collection_Framework/ArrayList/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>collection-practise</name>
+	<name>ArrayList</name>
 	<comment></comment>
 	<projects>
 	</projects>
